<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorForBackgroundMainActivity"
    tools:context=".ResultActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/feu_logo1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/result"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/mainVertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.00999999">

        <LinearLayout
            android:id="@+id/vert1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/h1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/EconomyText"
                    android:layout_width="262dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/EconomyText"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/resultEconomyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="%"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vert2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/h2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ElectronicEconomyText"
                    android:layout_width="247dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/ElectronicEconomyText"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/resultElectronicEconomyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="%"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vert3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/h3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/AccountingText"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/AccountingText"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/resultAccountingText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="%"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vert4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/h4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ISITTExt"
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/ISITText"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/resultISITTExt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="%"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/backMainActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:onClick="onClickBackMainActivity"
        android:text="@string/BackMainActivity"
        app:layout_constraintEnd_toEndOf="@+id/mainVertical"
        app:layout_constraintStart_toStartOf="@+id/mainVertical"
        app:layout_constraintTop_toBottomOf="@+id/mainVertical" />


</androidx.constraintlayout.widget.ConstraintLayout>